fixed status box overflowing the toolbar from bottom because of it's padding

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ main {
 }
 
 .status {
-  padding: 20px 24px;
+  padding: 17px 24px;
   flex: 1 1 auto;
 }
 
